samples/_failures_safe/1761098172_8cf222_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bfe93ce.c: In function ‘main’:
./samples/SAFE/__tmp_7bfe93ce.c:176:12: error: expected identifier or ‘(’ at end of input
  176 |     struct Token
      |            ^~~~~
./samples/SAFE/__tmp_7bfe93ce.c:176:12: error: expected declaration or statement at end of input
